AH-2004-03-15-1: Bugfix:    Fix resource reservation problem for sequential
                            jobs

AH-2004-03-15-0: Doc:       Made some fixes to calendar_conf(5) to make
                            it's behaviour more clear.

CR-2004-03-15-0: Testsuite: Adjustments for new GE install script output

AD-2004-03-12-1: Bugfix:    Did fix quote error.
                 Changed:   inst_execd.sh
                 Review:    AS

AD-2004-03-12-0: Bugfix:    Did fix broken symlinks for DARWIN.
                 Changed:   distinst
                 Review:    AS

MD-2004-03-12-1: Bugfix:    - added clear at the end of installation
                            - local fs check for irix65 was broken
                 Chaged:    inst_sge
                 Review:    AD

MD-2004-03-12-0: Enhancm:   - added a autoinstall readme
                 Changed:   README-Autoinstall.txt

SG-2004-03-12-2: Bugfix:    execd died, when a load sensor was restarted.
                 Issue:     835
                 Changed:   execd
                 Review:    AS

AH-2004-03-12-1: Bugfix:    fix access to free'd memory that caused
                            schedd fp-exception under tru64
                 Review:    AS

CR-2004-03-12-0: Enhancm.   Added a script to check install script syntax
                            of infotext calls: 
                 Added:     source/scripts/infotext_check_script_syntax.tcl
                 Modified:  source/scripts/infotext_msg_parse.tcl

SG-2004-03-12-1: Bugfix:    wrong qstat -F output with no requestable 
                            attributes
                 Issue:     837
                 Review:    EB

MD-2004-03-12-0: Bugfix:    wrong default duration in schedd configuration
                 Issue:     838
                 Changed:   inst_sge
                 Review:    SG

JG-2004-03-12-2: Testsuite: Testsuite installation was broken due to changed
                            messages.

JG-2004-03-12-1: Bugfix:    qconf -Aconf crashed.